# protocol.love

./: .envrc  .gitignore  Cargo.toml  DEVELOPERS.md  Makefile  README.md  SUMMARY.md  dna.yaml  happ.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  untitled.md
apps/protocol.love/: happ.yaml
dnas/protocol.love/: dna.yaml
docs/: untitled-1.md
test/: .envrc  http.js  index.js  index.ts  package-lock.json  package.json  tsconfig.json
test/common/: index.ts  timeout_opts_I.ts
test/http/: index.ts
test/tryorama/: create_collective_get_collective.test.ts  index.ts
zomes/cogov/: Readme.md  zome.json
zomes/cogov/code/: .hcbuild  .hcbuild.dev.json  .hcbuild.prod.json  Cargo.toml
zomes/cogov/code/src/: action.rs  cogov.js  collective.rs  ledger.rs  leger.rs  lib.rs  person.rs  proposal.rs  utils.rs
zomes/protocol-love/: .hcbuild.prod.json  Cargo.toml
zomes/protocol-love/code/: .hcbuild  Cargo.toml
zomes/protocol-love/code/src/: action.rs  collective.rs  ledger.rs  lib.rs  person.rs  proposal.rs  utils.rs
zomes/protocol-love/src/: collective.rs  index.rs  person.rs  utils.rs
zomes/protocol_love/: .hcbuild.dev.json  Cargo.toml  zome.json
zomes/protocol_love/src/: action.rs  collective.rs  index.rs  ledger.rs  lib.rs  person.rs  proposal.rs  utils.rs
