[package]
name = "protocol-love"
version = "0.1.0"
authors = ["brian.takita@gmail.com"]
edition = "2018"

[dependencies]
hdk3 = { git = "https://github.com/holochain/holochain.git", rev = "b77e4ae59a4d20a34e453ac0b878986173896838" }
serde = "=1.0.104"
chrono = { version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99.9"
thiserror = "1.0.20"
log = "=0.4.8"
serde_json = { version = "=1.0.64", features = ["preserve_order"] }
serde_derive = "=1.0.104"

[lib]
path = "src/index.rs"
crate-type = [ "cdylib", "rlib" ]
