[package]
name = "protocol_love"
version = "0.1.0"
authors = ["brian.takita@gmail.com"]
edition = "2018"

[lib]
path = "src/index.rs"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {  git = "https://github.com/holochain/holochain.git", rev = "78e2591449f1467f32b24219b4ffac75b6b840ee" }
serde = "=1.0.123"
thiserror = "1.0.20"
#chrono = { version = "0.4", features = ['alloc', 'std']}
#derive_more = "0.99.9"
#thiserror = "1.0.20"
#log = "=0.4.8"
#serde_json = { version = "=1.0.64", features = ["preserve_order"] }
#serde_derive = "=1.0.104"
