[package]
name = "protocol_love"
version = "0.1.0"
authors = ["brian.takita@gmail.com"]
edition = "2018"

[lib]
name = "protocol_love"
path = "src/lib.rs"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {  git = "https://github.com/holochain/holochain.git", branch = "develop" }
fixt = {  git = "https://github.com/holochain/holochain.git", branch = "develop" }
serde = "=1.0.123"
