[package]
name = "cogov"
version = "0.1.0"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
futures-io = "=0.3.1"
hdk = "=0.0.42-alpha1"
hdk_proc_macros = "=0.0.42-alpha1"
holochain_json_derive = "=0.0.17"
holochain_persistence_api = "=0.0.11"
holochain_wasm_utils = "=0.0.42-alpha1"
log = "0.4"
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
